Fixed home page navbar spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,21 @@ p { margin:0 }
 .top-buffer { margin-top:20px; }
 
 .navbar-dark {
-  background-color: #901CAD; }
+  background-color: #27336d; }
+
+  ul.list-group:after {
+    clear: both;
+    display: block;
+    content: "";
+  }
+  
+  .list-group-item {
+      float: left;
+      border: 0 !important;
+      margin: 0px;
+      padding: 10px 0px;
+  }
+  
+ 
 
 
